cleanups, refactor dependencies